--- a/_posts/2019-04-01-[BZOJ3577]玩手机.md
+++ b/_posts/2019-04-01-[BZOJ3577]玩手机.md
@@ -49,3 +49,127 @@ tags:
 1≤R,C≤60,0≤a,b≤10,000,0≤s,w≤10,000,1≤x1≤x2≤R,1≤y1≤y2≤C。
 
 ### 题解
+
+很容易想到网络流，$A\rightarrow S\rightarrow B$，但是如果一个$A$与所有范围内的点都连边的肯定会<code>TLE</code><code>MLE</code>
+
+考虑优化连边，~~很容易~~想到用线段树类似的结构优化！
+
+~~[四分树优化会<code>MLE</code>不要问我怎么知道的](<https://github.com/A-Failure/Dispwnl-s-codes/blob/master/_posts/%5BBZOJ3577%5D%E7%8E%A9%E6%89%8B%E6%9C%BA%EF%BC%88%E5%9B%9B%E5%88%86%E6%A0%91MLE%2BRE%EF%BC%89.md>)~~
+
+因为限制范围为正方形，所以可以用二维$ST$表优化了
+
+### 代码
+
+```c++
+# include<iostream>
+# include<cstring>
+# include<cstdio>
+# include<algorithm>
+using namespace std;
+const int MAX=2e5+5,inf=1e8;
+struct p{
+	int x,y,dis;
+}c[MAX<<2];
+int tot,T,n,m,A,B,num=1;
+int Log[MAX],h[MAX],d[MAX],H[MAX],qu[MAX];
+int st[7][61][61],ts[7][61][61];
+int read()
+{
+	int x(0);
+	char ch=getchar();
+	for(;!isdigit(ch);ch=getchar());
+	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
+	return x;
+}
+void add(int x,int y,int dis=inf)
+{
+	c[++num]=(p){h[x],y,dis},h[x]=num;
+	c[++num]=(p){h[y],x,0},h[y]=num;
+}
+void Init()
+{
+	for(int i=1;i<7;++i)
+	  for(int j=1;j<=n-(1<<i-1)+1;++j)
+	    for(int k=1;k<=m-(1<<i-1)+1;++k)
+	      {
+	      	st[i][j][k]=++tot,ts[i][j][k]=++tot;
+	      	add(st[i][j][k],st[i-1][j][k]);
+	      	add(st[i][j][k],st[i-1][j+(1<<i-1)][k]);
+	      	add(st[i][j][k],st[i-1][j][k+(1<<i-1)]);
+	      	add(st[i][j][k],st[i-1][j+(1<<i-1)][k+(1<<i-1)]);
+	      	add(ts[i-1][j][k],ts[i][j][k]);
+	      	add(ts[i-1][j+(1<<i-1)][k],ts[i][j][k]);
+	      	add(ts[i-1][j][k+(1<<i-1)],ts[i][j][k]);
+	      	add(ts[i-1][j+(1<<i-1)][k+(1<<i-1)],ts[i][j][k]);
+		  }
+}
+bool bfs()
+{
+	memset(d,0,sizeof(d));
+	int hl=1,tl=d[0]=1;
+	while(hl<=tl)
+	{
+		int tt=qu[hl++];
+		for(int i=h[tt];i;i=c[i].x)
+		  if(!d[c[i].y]&&c[i].dis)
+		  {
+		  	d[c[i].y]=d[tt]+1,qu[++tl]=c[i].y;
+		  	if(c[i].y==T) return 1;
+		  }
+	}
+	return 0;
+}
+int dfs(int x=0,int dix=inf)
+{
+	if(x==T||!dix) return dix;
+	int sum=0;
+	for(int &i=H[x],dis;i;i=c[i].x)
+	  if(d[c[i].y]==d[x]+1&&c[i].dis)
+	  {
+	  	dis=dfs(c[i].y,min(dix,c[i].dis));
+	  	if(dis)
+	  	{
+	  		sum+=dis,dix-=dis,c[i].dis-=dis,c[i^1].dis+=dis;
+	  		if(!dix) break;
+		}
+	  }
+	if(!sum) d[x]=-2;
+	return sum;
+}
+int Dinic()
+{
+	int tot=0,D;
+	while(bfs())
+	{
+		memcpy(H,h,sizeof(h));
+		while(D=dfs()) tot+=D;
+	}
+	return tot;
+}
+void change(int xl,int xr,int yl,int yr,int d)
+{
+	int Logx=Log[xr-xl+1];
+	add(d,st[Logx][xl][yl]),add(d,st[Logx][xl][yr-(1<<Logx)+1]),add(d,st[Logx][xr-(1<<Logx)+1][yl]),add(d,st[Logx][xr-(1<<Logx)+1][yr-(1<<Logx)+1]);
+}
+void _change(int xl,int xr,int yl,int yr,int d)
+{
+	int Logx=Log[xr-xl+1];
+	add(ts[Logx][xl][yl],d),add(ts[Logx][xl][yr-(1<<Logx)+1],d),add(ts[Logx][xr-(1<<Logx)+1][yl],d),add(ts[Logx][xr-(1<<Logx)+1][yr-(1<<Logx)+1],d);
+}
+int main()
+{
+	n=read(),m=read(),A=read(),B=read(),Log[0]=-1;
+	for(int i=1;i<=max(n,m);++i)
+	  Log[i]=Log[i>>1]+1;
+	for(int i=1;i<=n;++i)
+	  for(int j=1;j<=m;++j)
+	    st[0][i][j]=++tot,ts[0][i][j]=++tot,add(st[0][i][j],ts[0][i][j],read());
+	Init(),T=++tot;
+	for(int i=1,x,xl,xr,yl,yr;i<=A;++i)
+	  x=read(),xl=read(),yl=read(),xr=read(),yr=read(),change(xl,xr,yl,yr,++tot),add(0,tot,x);
+	for(int i=1,x,xl,xr,yl,yr;i<=B;++i)
+	  x=read(),xl=read(),yl=read(),xr=read(),yr=read(),_change(xl,xr,yl,yr,++tot),add(tot,T,x);
+	return printf("%d",Dinic()),0;
+}
+```
+
