--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -877,9 +877,9 @@ $fuge$：分治$FFT$可以用$K-D\ Tree$做吧
 
 ~~CDQ能做的K-D Tree都能做~~
 
-### $03.11$
+### $04.02$
 
-
+昊哥：我小时候**劫贫济富**
 
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
