--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -873,13 +873,17 @@ $Asia$：欸咱把$gayge$杯子里的水倒掉吧
 
 ### $03.09$
 
-$fuge$：分治$FFT$可以用$K-D\ Tree$做吧
+$fuge$：分治$FFT$可以用$K-D\ Tree​$做吧
 
 ~~CDQ能做的K-D Tree都能做~~
 
 ### $04.02$
 
 昊哥：我小时候**劫贫济富**
+
+------
+
+东鞋西毒：$fuge$在东边放了只鞋，西边的人都能中毒
 
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
