--- a/_posts/2019-04-03-[BZOJ4180]字符串计数.md
+++ b/_posts/2019-04-03-[BZOJ4180]字符串计数.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[BZOJ4180]字符串计数"
 date:		2019-04-03
 author:		"Dispwnl"
-header-img:	"img/used/"
+header-img:	"img/used/1243666.jpg"
 catalog:	false
 tags:
     - 矩阵乘法
