--- a/_posts/2019-04-03-[BZOJ4180]字符串计数.md
+++ b/_posts/2019-04-03-[BZOJ4180]字符串计数.md
@@ -1,78 +1,149 @@
 ---
 layout:		post
-title:		"[BZOJ4180]字符串计数"
-date:		2019-04-03
+title:		"[SDOI2018]原题识别"
+date:		2019-04-09
 author:		"Dispwnl"
-header-img:	"img/used/1243666.jpg"
+header-img:	"img/used/5656.jpg"
 catalog:	false
 tags:
-    - 矩阵乘法
-    - 后缀自动机
-    - 二分答案
+    - 主席树
+    - 莫队
+
 ---
 
-## [题目](<https://lydsy.com/JudgeOnline/problem.php?id=4180>)
+## [题目](<https://www.luogu.org/problemnew/show/P4618>)
 
-### Description
+### 题目描述
 
-SD有一名神犇叫做Oxer，他觉得字符串的题目都太水了，于是便出了一道题来虐蒟蒻yts1999。
+“人肉题库” 小 $Q$ 刷题非常勤奋，题量破万。每当有人拿题目请教他时，小 $Q$ 总能在 $1$ 秒内报出这 是哪个 $OJ$ 的哪道题。因此，小 $Q$ 是被当作 “原题搜索机” 一样的存在。
 
-他给出了一个字符串T，字符串T中有且仅有4种字符 'A', 'B', 'C', 'D'。现在他要求蒟蒻yts1999构造一个新的字符串S，构造的方法是：进行多次操作，每一次操作选择T的一个子串，将其加入S的末尾。
+有一天，小 $Q$ 来到了一棵 $n$ 个节点的有根树下，这棵树的根节点为 $1$ 号点，且每个节点都印着一道 题目。凭借超大的题量，小 $Q$ 迅速识别出了每道题的来源，并发现有些题目被搬运了好多次。他把每个 节点的题目都做了一个分类，第 $i$ 个节点的题目对应的题目种类为 $a_i$，当且仅当 $a_i=a_j$ 时，$i$ 点和 $j$点的题目来源是相同的。
 
-对于一个可构造出的字符串S，可能有多种构造方案，Oxer定义构造字符串S所需的操作次数为所有构造方案中操作次数的最小值。
+同一道题目做多次除了增加 $AC$ 数以外，对本身的水平没有任何提高。为了调查这棵树的题目质量， 小 $Q$ 会不断提出以下两种询问共 $m$ 次：
 
-Oxer想知道对于给定的正整数N和字符串T，他所能构造出的所有长度为N的字符串S中，构造所需的操作次数最大的字符串的操作次数。
+- $1$ $x$ $y$：如果将 $x$ 点到 $y$ 点的最短路径上的所有点 (包括 $x$ 和 $y$) 对应的题目都做一遍，那么一共可 以做到多少道本质不同的题目？
+- $2$ $A$ $B$：如果在 $A$ 点到根的最短路径上 (包括 $A$ 点和根) 等概率随机选择一个点 $x$，在 $B$ 点到根的最短路径上 (包括 $B$ 点和根) 等概率随机选择一个点 $y$，那么询问 $1$ $x$ $y$ 的答案期望是多少？
 
-蒟蒻yts1999当然不会做了，于是向你求助。
+定义 $cnt_x$ 表示 $x$ 点到根最短路径上的节点个数，因为小 $Q$ 不喜欢分数，而且第 $2$ 类询问的答案一 定可以表示成$\frac{ans}{{cnt_A}*{cnt_B}}$的形式，你只需要告诉他 $ans$ 的值就可以了。
 
-### Input
+识别这些题目消耗了小 $Q$ 太大的精力，他没有办法自己去计算这些简单的询问的答案。请写一个程序回答小 $Q$ 的所有 $m$ 个问题。
 
-第一行包含一个整数N，表示要构造的字符串长度。
+### 输入输出格式
 
-第二行包含一个字符串T，T的意义如题所述。
+#### 输入格式：
 
-### Output
+第一行包含一个正整数 $T$，表示测试数据的组数。 每组数据第一行包含 $5$ 个正整数 $n, p, SA, SB, SC$，其中 $n$ 表示树的节点个数。
 
-输出文件包含一行，一个整数，为你所求出的最大的操作次数。
+为了在某种程度上减少输入量，树边和每个点的题目种类 $a[]$ 将由以下代码生成：
 
-### Sample Input
-```plain
-5
-ABCCAD
 ```
-### Sample Output
-```plain
-5
+unsigned int SA, SB, SC;
+unsigned int rng61(){
+    SA ^= SA << 16;
+    SA ^= SA >> 5;
+    SA ^= SA << 1;
+    unsigned int t = SA;
+    SA = SB;
+    SB = SC;
+    SC ^= t ^ SA;
+    return SC;
+}
+void gen(){
+    scanf("%d%d%u%u%u", &n, &p, &SA, &SB, &SC);
+    for(int i = 2; i <= p; i++)
+    addedge(i - 1, i);
+    for(int i = p + 1; i <= n; i++)
+    addedge(rng61() % (i - 1) + 1, i);
+    for(int i = 1; i <= n; i++)
+    a[i] = rng61() % n + 1;
+}
 ```
-### HINT
 
-#### 【样例说明】
+第二行包含一个正整数 $m$，表示询问次数。
 
+接下来 $m$ 行，每行 $3$ 个正整数，形式为 $1$ $x$ $y$ 或者 $2$ $A$ $B$依次表示每个询问。
 
+#### 输出格式：
 
-例如字符串"AAAAA"，该字符串所需操作次数为5，不存在能用T的子串构造出的，且所需操作次数比5大的字符串。
+对于每组数据，输出 $m$ 行，每行一个整数，依次回答每个询问。
 
+### 输入输出样例
 
+#### 输入样例#1：
 
-#### 【数据规模和约定】
+```plain
+2
+5 3 10000 12345 54321
+3
+1 2 3
+2 1 3
+1 3 2
+10 6 23456 77777 55555
+5
+1 1 10
+2 3 5
+2 7 5
+2 5 4
+1 8 6
+```
 
-对于100%的数据，$1 ≤ N ≤ 10^18，1 ≤ \vert T\vert  ≤ 10^5$。
+#### 输出样例#1：
+
+```plain
+1
+5
+1
+4
+34
+61
+45
+3
+```
+
+### 说明
+
+$-1 ≤ T ≤ 3,2 ≤ p ≤ n ≤ 100000,1 ≤ m ≤ 200000\;-10000 ≤ SA, SB, SC ≤ 1000000,1 ≤ x, y, A, B ≤ n$
+
+子任务 $1$（$30$ 分）：只含第 $1$ 类询问。
+
+子任务 $2$（$30$ 分）：满足 $p = n$。
+
+子任务 $3$（$40$ 分）：没有任何附加的限制。
 
 ### 题解
 
-> 可能是省选前最后一篇题解了~~可能是这辈子最后一篇题解了~~
+> 因为有几个变量是<code>l_l,l_r,r_l,r_r​</code>
+>
+> 昊哥指着<code>l_r</code>说这不海鸥吗
+>
+> 昊哥指着<code>l_l,r_r</code>说这是顺拐的海鸥
+>
+> <code>r_l</code>就是内八字的海鸥了
 
-首先考虑给定串$S$，该以什么方式构造
+首先子任务$1$就是个树上莫队
 
-根据贪心，应该用$S$在$T$的$SAM$上面跑，如果匹配不了就返回根节点，表示加入一个子串（操作数$+1$）
+第$2$类询问先考虑在链上的情况，设查询$x,y$的答案且$x$是$y$的祖先
 
-为什么是对的呢？假设$a$是$b$的子串，那么$b$往后能匹配到的$a$肯定也可以，但$a$能匹配到的$b$不一定可以，这样就要求划分出来的当前要匹配的串尽可能的短
+考虑计算每个位置$t$对这个询问的贡献，设相同权值的前一个点为$T$，$d_x$为点$x$的深度，分情况讨论
 
-把$SAM$中的表示字符$c$的空节点向根的$c$儿子连一条权值为$1$的边，这样问题就转化成了要求在$SAM$这个图上跑$N$条边得到的权值和的最大值
+- 如果$t$是$x,y$的祖先，那么能产生的贡献为$(d_t-d_T)(d_x-d_t+1+d_y-d_t+1)$，拆开式子后为$-2{d_t}^2+2d_Td_t-d_T(d_x+d_y+2)+d_t(d_x+d_y+2)$，可以维护$d_t,d_T,d_td_T$的和处理
+- 如果$t$是$y$的祖先，$x$的孩子，那么能产生的贡献为$(d_y-d_t+1)(d_x-d_T)$，拆开式子后为$d_xd_y-d_xd_t+d_x-d_T(d_y+1)+d_td_T$，跟上面一样维护就行了，值得注意的是只有$T$为$x$祖先的时候才能产生贡献，所以用主席树维护即可
 
-发现根的$a$儿子转移到$b$儿子肯定是从离$a$最近的没有$b$儿子的节点转移过去的，所以可以把这个图化简，最后能化成一个$4$个点的完全图
+发现子任务$2$就是链的情况，所以现在有$60$分啦
 
-这样就可以二分答案，然后用矩乘检验答案是否正确了
+如果推广到树上的情况，设$x,y$的$LCA$为$v$，可以把询问拆成查询
+
+- $(1,fa_v),(1,x)$
+- $(1,fa_v),(1,y)$
+- $(x,v),(v,y)$
+
+发现前面两个都是链的情况，所以可以计算，注意要去掉$(1,fa_v)(1,fa_v)$的答案
+
+这个题的生成数据方式非常有意思，因为是先建出一条链然后随机往上连，所以每个点到主链（即点$1\sim p$构成的链）的距离期望不超过$\log n$，相同权值点的个数也很少
+
+所以可以暴力枚举$x\to v$这条链上的点$a$，查询$y\to v$上第一个相同权值的点的深度$D$，这样答案就是$(D-d_v)(d_x-d_a+1)$
+
+分类讨论化式子烦死了OAO
 
 ### 代码
 
@@ -80,101 +151,195 @@ ABCCAD
 # include<iostream>
 # include<cstring>
 # include<cstdio>
+# include<cmath>
+# include<vector>
 # include<algorithm>
+# define tl s[k].l
+# define tr s[k].r
+# define mid (l+r>>1)
 # define LL long long
 using namespace std;
 const int MAX=2e5+5;
-struct p{
-	LL a[4][4];
-	void clear()
-	{
-		for(int i=0;i<4;++i)
-		  for(int j=0;j<4;++j)
-		    a[i][j]=1e18;
+struct q{
+	int x,y;
+}c[MAX];
+struct u{
+	int l,r,s;
+	LL x,_x,_x_;
+}s[MAX*19];
+int T,n,m,num,p,ans,cnt,k,tot,Tot;
+unsigned int SA,SB,SC;
+int h[MAX],use[MAX*6],qwq[MAX],re[MAX],In[MAX],Out[MAX],Num[MAX],a[MAX],pos[MAX],d[MAX],fa[MAX],siz[MAX],son[MAX],top[MAX],NUM[MAX*6],L[MAX*6],rt[MAX],pre[MAX];
+LL Ans[MAX],D[MAX];
+struct o{
+	int l,r,id,lca;
+	bool operator< (const o &a)
+	const{
+		if(pos[l]!=pos[a.l]) return pos[l]<pos[a.l];
+		return r<a.r;
 	}
-}a;
-int n;
-LL N;
-char s[MAX];
-p operator* (p A,p B)
+}qu[MAX<<1];
+vector<int> vec[MAX];
+int read()
 {
-	p ans;
-	ans.clear();
-	for(int i=0;i<4;++i)
-	  for(int j=0;j<4;++j)
-	    for(int k=0;k<4;++k)
-	      ans.a[i][j]=min(ans.a[i][j],A.a[i][k]+B.a[k][j]);
-	return ans;
+	int x(0);
+	char ch=getchar();
+	for(;!isdigit(ch);ch=getchar());
+	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
+	return x;
 }
-p Pow(p a,LL b)
+unsigned int rng61()
 {
-	p ans;
-	memset(ans.a,0,sizeof(ans.a));
-	for(;b;b>>=1,a=a*a)
-	  if(b&1) ans=ans*a;
-	return ans;
+	SA^=SA<<16,SA^=SA>>5,SA^=SA<<1;
+	unsigned int t=SA;
+	SA=SB,SB=SC,SC^=t^SA;
+	return SC;
 }
-struct SAM{
-	int l,r,L;
-	int len[MAX],fa[MAX],qu[MAX],d[MAX];
-	int son[MAX][4];
-	bool use[MAX];
-	SAM() {l=r=1;}
-	void ins(int x)
+void add(int x,int y)
+{
+	c[++num]=(q){h[x],y},h[x]=num;
+	c[++num]=(q){h[y],x},h[y]=num;
+}
+void gen()
+{
+	n=read(),p=read(),SA=read(),SB=read(),SC=read();
+	for(int i=2;i<=p;++i)
+	  add(i-1,i);
+	for(int i=p+1;i<=n;++i)
+	  add(rng61()%(i-1)+1,i);
+	for(int i=1;i<=n;++i)
+	  a[i]=rng61()%n+1;
+}
+void change(int l,int r,int &k,int pre,int d,int d1)
+{
+	s[k=++Tot]=s[pre],s[k].x+=d,s[k]._x+=d1,s[k]._x_+=1ll*d*d1,++s[k].s;
+	if(l==r) return;
+	if(d1<=mid) change(l,mid,tl,s[pre].l,d,d1);
+	else change(mid+1,r,tr,s[pre].r,d,d1);
+}
+u operator+ (u A,u B) {return (u){0,0,A.s+B.s,A.x+B.x,A._x+B._x,A._x_+B._x_};}
+u operator- (u A,u B) {return (u){0,0,A.s-B.s,A.x-B.x,A._x-B._x,A._x_-B._x_};}
+u ask(int l,int r,int k,int pre,int L,int R)
+{
+	if(l==L&&r==R) return s[pre]-s[k];
+	if(R<=mid) return ask(l,mid,tl,s[pre].l,L,R);
+	if(L>mid) return ask(mid+1,r,tr,s[pre].r,L,R);
+	return ask(l,mid,tl,s[pre].l,L,mid)+ask(mid+1,r,tr,s[pre].r,mid+1,R);
+}
+void dfs(int x=1,int F=0)
+{
+	pre[x]=L[a[x]],L[a[x]]=x,fa[x]=F,d[x]=d[F]+(siz[x]=1),re[In[x]=++cnt]=x,D[x]=D[F]+1ll*d[x]*d[x],vec[a[x]].push_back(x);
+	change(0,n,rt[x],rt[F],d[x],d[pre[x]]);
+	for(int i=h[x];i;i=c[i].x)
+	  if(F^c[i].y)
+	  {
+	  	dfs(c[i].y,x),siz[x]+=siz[c[i].y];
+	  	if(siz[c[i].y]>siz[son[x]]) son[x]=c[i].y;
+	  }
+	re[Out[x]=++cnt]=x,L[a[x]]=pre[x];
+}
+void dfs1(int x=1,int tp=1)
+{
+	top[x]=tp;
+	if(!son[x]) return;
+	dfs1(son[x],tp);
+	for(int i=h[x];i;i=c[i].x)
+	  if((c[i].y^fa[x])&&(c[i].y^son[x])) dfs1(c[i].y,c[i].y);
+}
+int LCA(int x,int y)
+{
+	while(top[x]^top[y])
 	{
-		int tt=r;
-		len[r=++l]=++L;
-		for(;tt&&!son[tt][x];tt=fa[tt])
-		  son[tt][x]=r;
-		if(!tt) return void(fa[r]=1);
-		int qwq=son[tt][x];
-		if(len[qwq]==len[tt]+1) return void(fa[r]=qwq);
-		len[++l]=len[tt]+1,fa[l]=fa[qwq],fa[qwq]=fa[r]=l;
-		for(int i=0;i<4;++i)
-		  son[l][i]=son[qwq][i];
-		for(int i=tt;son[i][x]==qwq;i=fa[i])
-		  son[i][x]=l;
+		if(d[top[x]]<d[top[y]]) swap(x,y);
+		x=fa[top[x]];
 	}
-	void Solve(int x)
-	{
-		int hl=1,tl=1,cnt=0;
-		qu[1]=son[1][x],d[son[1][x]]=0;
-		while(hl<=tl)
-		{
-			if(cnt==4) return;
-			int tt=qu[hl++];
-			for(int i=0;i<4;++i)
-			  if(!son[tt][i])
-			  {
-			  	if(a.a[x][i]==1e18) a.a[x][i]=d[tt]+1,++cnt;
-			  }
-			  else if(!use[son[tt][i]]) use[son[tt][i]]=1,d[son[tt][i]]=d[tt]+1,qu[++tl]=son[tt][i];
-		}
-	}
-}_S;
-bool look(LL mid)
-{
-	p b=Pow(a,mid);
-	LL val=1e18;
-	for(int i=0;i<4;++i)
-	  for(int j=0;j<4;++j)
-	    val=min(val,b.a[i][j]);
-	return val<N;
+	return d[x]>d[y]?y:x;
 }
+void add(int x) {if(++NUM[a[re[x]]]==1) ++ans;}
+void del(int x) {if(!--NUM[a[re[x]]]) --ans;}
+void Mem()
+{
+	ans=cnt=num=tot=Tot=0;
+	memset(h,0,sizeof(h));
+	memset(rt,0,sizeof(rt));
+	memset(son,0,sizeof(son));
+	memset(NUM,0,sizeof(NUM));
+	memset(Num,0,sizeof(Num));
+	memset(use,0,sizeof(use));
+	memset(vec,0,sizeof(vec));
+}
+LL Solve(int x,int y)
+{
+	if(d[x]>d[y]) swap(x,y);
+	u X=ask(0,n,rt[0],rt[x],0,n),Y=ask(0,n,rt[x],rt[y],0,d[fa[x]]);
+	return -d[x]-2*D[x]+2*X._x_+(X.x-X._x)*(d[x]+d[y]+2)+1ll*d[x]*d[y]*Y.s-Y.x*d[x]+1ll*d[x]*Y.s-Y._x*(d[y]+1)+Y._x_;
+}
+bool look(int lca,int y,int x) {return In[lca]<=In[x]&&Out[lca]>=Out[x]&&In[y]>=In[x]&&Out[y]<=Out[x];}
 int main()
 {
-	scanf("%lld%s",&N,s+1),n=strlen(s+1),a.clear();
-	for(int i=1;i<=n;++i)
-	  _S.ins(s[i]-'A');
-	_S.Solve(0),_S.Solve(1),_S.Solve(2),_S.Solve(3);
-	LL l=1,r=N,ans;
-	while(l<=r)
+	T=read();
+	while(T--)
 	{
-		LL mid(l+r>>1);
-		if(look(mid)) ans=mid,l=mid+1;
-		else r=mid-1;
+		Mem(),gen(),m=read(),dfs(),dfs1(),k=sqrt(cnt);
+		for(int i=1;i<=cnt;++i)
+		  pos[i]=(i-1)/k+1;
+		for(int i=1,op,x,y,cnt,lca,l_l,l_r,r_l,r_r,X,Y;i<=m;++i)
+		  {
+		  	op=read(),x=read(),y=read(),lca=LCA(x,y),cnt=0;
+			if(op==1)
+			{
+				qu[++tot].id=i,qu[tot].lca=lca,l_l=In[x],l_r=Out[x],r_l=In[y],r_r=Out[y];
+			  	if(l_r<=r_l) qu[tot].l=l_r,qu[tot].r=r_l;
+			  	else if(r_r<=l_l) qu[tot].l=r_r,qu[tot].r=l_l;
+			  	else if(l_r<=r_r) qu[tot].l=l_r,qu[tot].r=r_r;
+			  	else if(r_r<=l_r) qu[tot].l=r_r,qu[tot].r=l_r;
+			  	if(qu[tot].lca==x||qu[tot].lca==y) qu[tot].lca=0;
+			}
+			else if(op==2)
+			{
+				if(lca==x||lca==y) Ans[i]=Solve(x,y);
+				else
+				{
+					X=LCA(x,p),Y=LCA(y,p);
+					if(d[X]>d[Y]) swap(x,y),swap(X,Y);
+					u Dx=ask(0,n,rt[fa[lca]],rt[y],0,d[lca]-1);
+					Ans[i]=Solve(fa[lca],y)+Solve(fa[lca],x)-Solve(fa[lca],fa[lca])+(Dx.s*(d[y]+1)-Dx.x)*(d[x]-d[lca]+1);
+					for(int tt=x;tt!=lca;tt=fa[tt])
+					  qwq[++cnt]=tt;
+					qwq[++cnt]=lca;
+					while(cnt)
+					{
+						int tt=qwq[cnt--],D_;
+						if(use[a[tt]]!=i)
+						{
+							use[a[tt]]=i,D_=d[y]+1;
+							for(int j=0,Cnt=vec[a[tt]].size();j<Cnt;++j)
+							  if(look(lca,y,vec[a[tt]][j])) D_=min(D_,d[vec[a[tt]][j]]);
+							Ans[i]+=1ll*(D_-d[lca])*(d[x]-d[tt]+1);
+						}
+					}
+				}
+			}
+		  }
+		sort(qu+1,qu+1+tot);
+		for(int i=1,l=1,r=0,op;i<=tot;++i)
+		  {
+		  	op=0;
+			while(r<qu[i].r) if(++Num[re[++r]]==2) del(r);
+		  	else add(r);
+		  	while(l<qu[i].l) if(--Num[re[l]]==1) add(l++);
+		  	else del(l++);
+		  	while(l>qu[i].l) if(++Num[re[--l]]==2) del(l);
+		  	else add(l);
+		  	while(r>qu[i].r) if(--Num[re[r]]==1) add(r--);
+		  	else del(r--);
+			if(qu[i].lca&&!NUM[a[qu[i].lca]]) op=1;
+		  	Ans[qu[i].id]=ans+op;
+		  }
+		for(int i=1;i<=m;++i)
+		  printf("%lld\n",Ans[i]);
 	}
-	return printf("%lld",ans+1),0;
+	return 0;
 }
 ```
 
