--- a/_posts/2019-04-09-[SDOI2018]原题识别.md
+++ b/_posts/2019-04-09-[SDOI2018]原题识别.md
@@ -23,7 +23,7 @@ tags:
 - $1$ $x$ $y$：如果将 $x$ 点到 $y$ 点的最短路径上的所有点 (包括 $x$ 和 $y$) 对应的题目都做一遍，那么一共可 以做到多少道本质不同的题目？
 - $2$ $A$ $B$：如果在 $A$ 点到根的最短路径上 (包括 $A$ 点和根) 等概率随机选择一个点 $x$，在 $B$ 点到根的最短路径上 (包括 $B$ 点和根) 等概率随机选择一个点 $y$，那么询问 $1$ $x$ $y$ 的答案期望是多少？
 
-定义 $cnt_x$ 表示 $x$ 点到根最短路径上的节点个数，因为小 $Q$ 不喜欢分数，而且第 $2$ 类询问的答案一 定可以表示成$\frac{ans}{{cnt_A}*{cnt_B}}$的形式，你只需要告诉他 $ans$ 的值就可以了。
+定义 $cnt_x$ 表示 $x$ 点到根最短路径上的节点个数，因为小 $Q$ 不喜欢分数，而且第 $2$ 类询问的答案一 定可以表示成$\frac{ans}{cnt_A*cnt_B}$的形式，你只需要告诉他 $ans$ 的值就可以了。
 
 识别这些题目消耗了小 $Q$ 太大的精力，他没有办法自己去计算这些简单的询问的答案。请写一个程序回答小 $Q$ 的所有 $m$ 个问题。
 
