--- a/_posts/2019-04-09-[SDOI2018]原题识别.md
+++ b/_posts/2019-04-09-[SDOI2018]原题识别.md
@@ -23,9 +23,9 @@ tags:
 - $1$ $x$ $y$：如果将 $x$ 点到 $y$ 点的最短路径上的所有点 (包括 $x$ 和 $y$) 对应的题目都做一遍，那么一共可 以做到多少道本质不同的题目？
 - $2$ $A$ $B$：如果在 $A$ 点到根的最短路径上 (包括 $A$ 点和根) 等概率随机选择一个点 $x$，在 $B$ 点到根的最短路径上 (包括 $B$ 点和根) 等概率随机选择一个点 $y$，那么询问 $1$ $x$ $y$ 的答案期望是多少？
 
-定义 $cnt_x$ 表示 $x$ 点到根最短路径上的节点个数，因为小 $Q$ 不喜欢分数，而且第 $2$ 类询问的答案一 定可以表示成$\frac{ans}{cnt_A*cnt_B}$的形式，你只需要告诉他 $ans$ 的值就可以了。
+定义 $cnt_x$ 表示 $x$ 点到根最短路径上的节点个数，因为小 $Q$ 不喜欢分数，而且第 $2$ 类询问的答案一 定可以表示成$\frac{ans}{cnt_Acnt_B}$的形式，你只需要告诉他 $ans$ 的值就可以了。
 
-识别这些题目消耗了小 $Q$ 太大的精力，他没有办法自己去计算这些简单的询问的答案。请写一个程序回答小 $Q$ 的所有 $m$ 个问题。
+识别这些题目消耗了小 $Q​$ 太大的精力，他没有办法自己去计算这些简单的询问的答案。请写一个程序回答小 $Q​$ 的所有 $m​$ 个问题。
 
 ### 输入输出格式
 
@@ -121,7 +121,7 @@ $-1 ≤ T ≤ 3,2 ≤ p ≤ n ≤ 100000,1 ≤ m ≤ 200000\;-10000 ≤ SA, SB, 
 
 第$2$类询问先考虑在链上的情况，设查询$x,y$的答案且$x$是$y$的祖先
 
-考虑计算每个位置$t$对这个询问的贡献，设相同权值的前一个点为$T$，$d_x$为点$x$的深度，分情况讨论
+考虑计算每个位置$t​$对这个询问的贡献，设相同权值的前一个点为$T​$，$d_x​$为点$x​$的深度，分情况讨论
 
 - 如果$t​$是$x,y​$的祖先，那么能产生的贡献为$(d_t-d_T)(d_x-d_t+1+d_y-d_t+1)​$，拆开式子后为$-2{d_t}^2+2d_Td_t-d_T(d_x+d_y+2)+d_t(d_x+d_y+2)​$，可以维护$d_t,d_T,d_td_T​$的和处理
 
