--- a/_posts/9999-12-31-某些奇怪的维护优化方法？.md
+++ b/_posts/9999-12-31-某些奇怪的维护优化方法？.md
@@ -23,9 +23,9 @@ tags:
 - 外层子树里的节点的贡献
 - 外层祖先的贡献
 
-如果要矩形$(x,y)(x1,y1),x\le x1,y\le y1$的值$+d$，假设在外层找到了区间$[x,x1]$，它对它的父亲节点（还有它自己）内层区间$[y,y1]$的贡献都是$+d$，这部分比较好想，复杂度$O({logn}^2)$，同时把区间$[x,x1]$内层区间$[y,y1]$对应节点的标记$+d​$
+如果要矩形$(x,y)(x1,y1),x\le x1,y\le y1​$的值$+d​$，假设在外层找到了区间$[x,x1]​$，它对它的父亲节点（还有它自己）内层区间$[y,y1]​$的贡献都是$+d​$，这部分比较好想，复杂度$O({\log n}^2)​$，同时把区间$[x,x1]​$内层区间$[y,y1]​$对应节点的标记$+d​$
 
-第二部分考虑外层区间往下找的过程，查询祖先节点内层区间$[y,y1]$的标记和$T$，这部分肯定是包含的查询矩形的，所以答案就是$T+外层[x,x1]的内层[y,y1]的值$，这部分复杂度也是$O({logn}^2)​$
+第二部分考虑外层区间往下找的过程，查询祖先节点内层区间$[y,y1]​$的标记和$T​$，这部分肯定是包含的查询矩形的，所以答案就是$T+外层[x,x1]的内层[y,y1]的值​$，这部分复杂度也是$O({\log n}^2)​$
 
 ### 带删除的堆
 
