--- a/_posts/2019-04-11-[清华集训2016]汽水.md
+++ b/_posts/2019-04-11-[清华集训2016]汽水.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[清华集训2016]汽水"
 date:		2019-04-11
 author:		"Dispwnl"
-header-img:	"img/used/32355.png"
+header-img:	"img/used/5787.jpg"
 catalog:	false
 tags:
     - 点分治
