--- a/_posts/2018-11-05-杂题.md
+++ b/_posts/2018-11-05-杂题.md
@@ -9,15 +9,15 @@ tags:
     - 日常
     - 整理
 ---
-## [01](http://www.zhengruioi.com/problem/394)
-### 题目大意
+### [01](http://www.zhengruioi.com/problem/394)
+#### 题目大意
 给定一个$01$串，找满足$0$的数量是$k$倍$1$的数量的最长子串
 
-### 题解
+#### 题解
 可以发现一个$1$相当于$k$个$0$，所以记录$0$的数量，把$1$转换成$-k$个$0$，维护两个相同的前缀和的最远距离
 
-### 代码
-```
+#### 代码
+```c++
 # include<iostream>
 # include<cstring>
 # include<cstdio>
@@ -44,17 +44,17 @@ int main()
 	return printf("%d",_maxn),0;
 }
 ```
-## [biology](http://www.zhengruioi.com/problem/472)
-### 题目大意
+### [biology](http://www.zhengruioi.com/problem/472)
+#### 题目大意
 给定矩阵$a,b$，要求找一条不一定连续的路径$L$，使得路径上的$a>0$且递增，求$\sum_{(x_i,y_i)\in L}b_{i,j}+\mid x_i-x_{i-1}\mid +\mid y_i-y_{i-1}\mid$的最大值
 
-### 题解
+#### 题解
 显然排序$a$后可以$O(n^2\times m^2)$转移，发现要是没有绝对值就可以直接$O(n\times m)$转移
 
 把$\mid x_i-x_{i-1}\mid +\mid y_i-y_{i-1}\mid$分情况拆开，维护$4$个值，然后就可以$O(n\times m)$转移了
 
-### 代码
-```
+#### 代码
+```c++
 # include<iostream>
 # include<cstring>
 # include<cstdio>
@@ -102,17 +102,17 @@ int main()
 	return printf("%lld",ans),0;
 }
 ```
-## [english](http://www.zhengruioi.com/contest/156/problem/473)
-### 题目大意
+### [english](http://www.zhengruioi.com/contest/156/problem/473)
+#### 题目大意
 给定一个序列$a$，求$\sum_{l=1}^{n}\sum_{r=l}^{n}(a_l\oplus a_r)\times max(a_i),l\le i\le r$和$\sum_{l=1}^{n}\sum_{r=l}^{n}[(a_l\oplus a_r)>max(a_i)]\times max(a_i),l\le i\le r$
 
-### 题解
+#### 题解
 第一问是很好求的，维护两个单调栈，求出$a_i$左右第一个大于ta的位置，说明这一段区间最大值就是$a_i$，异或就每一位的维护，$num0_l\times num1_r+num1_l\times num0_r$
 
 第二问考虑用$Trie$维护$a_i$二进制每一位，对于第一问求出$i$的区间$[l_i,r_i]$，枚举左右区间中较小的，查询另一半中异或枚举值大于$a_i$的个数
 
-### 代码
-```
+#### 代码
+```c++
 # include<iostream>
 # include<cstring>
 # include<cstdio>
@@ -202,19 +202,19 @@ int main()
 	return 0;
 }
 ```
-## u
-### 题目大意
+### u
+#### 题目大意
 给定一个$n\times n$的矩阵，初始矩阵全为$0$，有$q$次修改，每次给一个左上顶点为$(r,c)$、直角边长为$l$的下三角区域加上$s$
 
 求$q$次修改后矩阵的异或和
 
-### 题解
+#### 题解
 如果修改的是一段区间的话可以用修改差分数组$O(1)$实现，把直角三角形看成$l$条递增的区间依次修改，复杂度$O(nq+n^2)$
 
 发现如果斜着看，直角三角形斜边上相当于修改区间，所以也可以用修改差分数组的方法修改，竖着同理，复杂度$O(q+n^2)$
 
-### 代码
-```
+#### 代码
+```c++
 # include<iostream>
 # include<cstring>
 # include<cstdio>
@@ -243,17 +243,17 @@ int main()
 	return printf("%lld",ans),0;
 }
 ```
-## v
-### 题目大意
+### v
+#### 题目大意
 给定一个字符串，里面字符可能是<code>'W'</code>和<code>'B'</code>，要操作$k$次，第$i$次等概率选择一个$[1,n-i+1]$中的数$x$，可以选择从左或者从右开始第$x$个不为空的位置，去掉上面的字符，求最优策略下去除<code>'W'</code>的期望个数
 
-### 题解
+#### 题解
 可以用$2$进制表示字符串的状态，因为最大可能是$1<<30$，所以小数用数组存，大数用```map```存
 
 然后记忆化搜索即可
 
-### 代码
-```
+#### 代码
+```c++
 # include<iostream>
 # include<cstring>
 # include<cstdio>
