--- a/_posts/2019-04-09-自闭的SDOI2019R1.md
+++ b/_posts/2019-04-09-自闭的SDOI2019R1.md
@@ -2,8 +2,8 @@
 layout:		post
 title:		"自闭的SDOI2019R1"
 date:		2019-04-09
-author:		Dispwnl
-header-img:	
+author:		"Dispwnl"
+header-img:	"img/used/1438340.png"
 catalog:	false
 tags:
     - 比赛
