--- a/_posts/9999-12-31-常见错误.md
+++ b/_posts/9999-12-31-常见错误.md
@@ -39,11 +39,13 @@ tags:
 - 一定要读懂题，学好语文非常重要
 - 广义$SAM$不要用基数排序处理线段树合并~~其实好像是可以的但是我不想写[对的广义SAM](https://blog.csdn.net/elijahqi/article/details/79782107?utm_source=blogxgwz2)了就这么认为吧~~
 - 指针移动的时候注意不要出边界
-- 写有返回值的函数一定要返回值
+- 写有返回值的函数一定要返回值（开$O2$会出错）
 - 求叉积的时候注意数据范围，小心乘爆
 - 文件操作检查是否写了<code>.in</code><code>.out</code>
 - 测**大**样例的时候注意要用文件操作
-- 
+- 点分治找子树重心的初始值一定要设好
+- 注意题目要求的时间和空间限制
+- 考试时先把每个题的暴力打出来并保证好没有锅
 
 [$Cansult$](https://cansult.ga/22925.html)
 
