--- a/_posts/2019-04-13-[SDOI2016]墙上的句子.md
+++ b/_posts/2019-04-13-[SDOI2016]墙上的句子.md
@@ -74,6 +74,24 @@ ADA_SIVRAJ
 
 ### 题解
 
+> 我就是被卡死，不停<code>RE</code>，写处理$10+k$，我也绝对不会用<code>string</code>写题！
+>
+> $2+k$就<code>AC</code>了，<code>string</code>+<code>map</code>真是嗨到不行啊
+
+数据范围就暗示了这是个网络流……
+
+先把回文串摘出来
+
+因为要求的是最小答案，考虑最小割
+
+如果一个单词$A$翻转后仍是单词（假设是$B$），它会产生$2$的贡献，假设$A<B$，则$A$向$B$连一条流量为$2$的边
+
+如果第$i​$行是从左向右读的并且翻转后字典序大，则$S\to i\to 第i行的单词的A​$，流量为$inf​$，表示不可割；翻转后字典序小，则$第i行的单词B\to i\to T​$，流量为$inf​$
+
+如果第$i$行没有确定阅读顺序，则$B\to i\to A$，流量为$inf$，表示无论从哪边读都可以
+
+从右到左、从上到下、从下到上同理
+
 ### 代码
 
 ```c++
