--- a/_posts/2019-04-14-[SDOI2016]模式字符串.md
+++ b/_posts/2019-04-14-[SDOI2016]模式字符串.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[SDOI2016]模式字符串"
 date:		2019-04-14
 author:		"Dispwnl"
-header-img:	"img/used/"
+header-img:	"img/used/345456.png"
 catalog:	false
 tags:
     - 点分治
