--- a/_posts/2019-04-16-[LOJ6073]距离.md
+++ b/_posts/2019-04-16-[LOJ6073]距离.md
@@ -16,7 +16,7 @@ tags:
 
 设$d_x$表示$x$到根的距离，对于每个询问，可以把它拆成
 
-$\sum_{i\in path(u,v)}d_k+d_{p_i}-2d_{LCA(k,p_i)}$
+$\sum_{i\in path(u,v)}d_k+d_{p_i}-2d_{LCA(k,p_i)}​$
 
 第一个直接$d_k$乘路径长度，第二个可以处理出来$dfs$序上的前缀和，然后跳链统计即可
 
@@ -26,7 +26,7 @@ $\sum_{i\in path(u,v)}d_k+d_{p_i}-2d_{LCA(k,p_i)}$
 
 因为要在线，所以可以用主席树维护，跳链的时候查询$dfs$序上一段区间在$path(1,k)$上和是多少
 
-复杂度似乎是$O(q{\log n}^3)$的~~树剖的事，能算log吗~~
+复杂度似乎是$O(q{\log n}^3)$的~~树剖的事，能叫log吗~~
 
 ### 代码
 
