--- a/_posts/2019-01-12-[LOJ6041]事情的相似度.md
+++ b/_posts/2019-01-12-[LOJ6041]事情的相似度.md
@@ -1,6 +1,6 @@
 ---
 layout:		post
-title:		"「雅礼集训 2017 Day7」事情的相似度"
+title:		"[LOJ6041]事情的相似度"
 date:		2019-01-12
 author:		"Dispwnl"
 header-img:	"img/used/28348.jpg"
