--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -885,5 +885,25 @@ $fuge$：分治$FFT$可以用$K-D\ Tree​$做吧
 
 东鞋西毒：$fuge$在东边放了只鞋，西边的人都能中毒
 
-[$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
+[$Cansult​$的日记 比我的有意思多了](https://cansult.ga/3632.html)
+
+### $04.17$
+
+$fuge$晚饭要吃鸡米花
+
+于是昊哥软磨硬泡让给ta也带一个
+
+于是我软磨硬泡让ta也带一个+一个汉堡
+
+$fuge$：诶艹这样我是不是有点丢人啊拿着三个饭卡分开刷
+
+我：没事等你高三退役了拿着一个班的饭卡那才丢人
+
+昊哥：你到那时候就把饭卡粘自行车轮胎上，然后扛着自行车进食堂，对着刷卡机就使劲转车轱辘……
+
+昊哥：要是还是效率低的话就背着个坦克对着……
+
+$fuge$：不不不还是粘坦克履带上吧这样一次能刷两种
+
+昊哥：你还可以背个火车……
 
