--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -825,7 +825,7 @@ $Asia$：但是这样好像很脏
 
 然后三个人一齐把腿放在了台阶上……
 
-#### $2\ 1\ 1$
+#### $2\ 1\ 1$（$Asia$，$fuge$，我）
 
 我：诶$Asia$你为什么放在了第二个上面
 
@@ -837,7 +837,7 @@ $Asia$：因为这样舒服
 
 #### $2\ 3\ 4$
 
-$Asia$&$fuge$：艹
+$Asia\&fuge$：艹
 
 #### $5\ 5\ 5$
 
