--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -847,15 +847,15 @@ $Asia\&fuge$：艹
 
 $Refun$：哎下次我带你去吃个$36$块钱的自助餐，在xxxx旁边，甚至还有蟑螂
 
-$fuge$（吃惊）：这太“贵”了，$3$8块钱？
+$fuge$（吃惊）：这太“贵”了，$36$块钱？
 
-$Refun​$（用手比）：这么小
+$Refun$（用手比）：这么小
 
-$fuge$：$3$8块钱？
+$fuge$：$36$块钱？
 
 $Refun​$：这么小
 
-我：？？？一只蟑螂$38$？
+我：？？？一只蟑螂$36$？
 
 ### $03.06$
 
