--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -907,3 +907,27 @@ $fuge$：不不不还是粘坦克履带上吧这样一次能刷两种
 
 昊哥：你还可以背个火车……
 
+------
+
+我刷知乎刷出来[考不上一本正常吗？](https://www.zhihu.com/question/316281745/answer/636471973)这个问题
+
+$fuge$（悄声）：新东方已经给我降$60$啦
+
+我（震惊）：woc这太dio了⑧
+
+$fuge​$（得意）：lz也算半个抱送生啦
+
+我转向$Refun$：你知道么$fuge$被新东方保送了！
+
+$Refun$（不屑）：哦，我半年前就被蓝翔保送了！
+
+$fuge$：那你还在这干啥
+
+$Refun$：我……我……我是来卧底哒！其实我是来做星探的！就要挖掘不世出的人才
+
+$Refun$（指着趴在桌子上~~睡觉~~提升思维能力的昊哥）：你看那个小伙就非常有当教皇的潜质！
+
+昊哥（睡眼惺忪）：？？？
+
+
+
