--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -917,13 +917,13 @@ $fuge$（悄声）：新东方已经给我降$60$啦
 
 $fuge​$（得意）：lz也算半个抱送生啦
 
-我转向$Refun$：你知道么$fuge$被新东方保送了！
+我转向$Refun​$：你知道么$fuge​$被新东方保送了！
 
 $Refun$（不屑）：哦，我半年前就被蓝翔保送了！
 
 $fuge$：那你还在这干啥
 
-$Refun$：我……我……我是来卧底哒！其实我是来做星探的！就要挖掘不世出的人才
+$Refun$：我……我……我是来卧底哒！其实我是来做星探哒！就要挖掘不世出的人才
 
 $Refun$（指着趴在桌子上~~睡觉~~提升思维能力的昊哥）：你看那个小伙就非常有当教皇的潜质！
 
