--- a/_posts/2019-04-17-[JOI 2018 Final]毒蛇越狱.md
+++ b/_posts/2019-04-17-[JOI 2018 Final]毒蛇越狱.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[JOI 2018 Final]毒蛇越狱"
 date:		2019-04-17
 author:		"Dispwnl"
-header-img:	"img/used"
+header-img:	"img/used/53446151.png"
 catalog:	false
 tags:
     - 容斥
