--- a/_posts/2019-04-17-[JOI 2019 Final]独特的城市.md
+++ b/_posts/2019-04-17-[JOI 2019 Final]独特的城市.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[JOI 2019 Final]独特的城市"
 date:		2019-04-17
 author:		"Dispwnl"
-header-img:	"img/used/"
+header-img:	"img/used/6778866.jpg"
 catalog:	false
 tags:
     - 瞎搞
