--- a/_posts/2018-10-26-[BZOJ2288]生日礼物.md
+++ b/_posts/2018-10-26-[BZOJ2288]生日礼物.md
@@ -1,6 +1,6 @@
 ---
 layout:         post
-title:          "[BZOJ2288][POJ Challenge]生日礼物"
+title:          "[BZOJ2288]生日礼物"
 date:           2018-10-26
 author:         "Dispwnl"
 header-img:     "img/used/4786.jpg"
@@ -21,7 +21,7 @@ ftiasch 18岁生日的时候，lqp18_31给她看了一个神奇的序列 A1, A2,
 第2行， N 个整数 A1, A2, ..., AN (-10^4 ≤ Ai ≤ 10^4), 序列。
 
 ### Output
- 
+
 一个整数，最大的和。
 
 ### Sample Input
