--- a/_posts/2018-10-30-[BZOJ5091]摘苹果.md
+++ b/_posts/2018-10-30-[BZOJ5091]摘苹果.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "[BZOJ5091][Lydsy1711月赛]摘苹果"
+title:      "[BZOJ5091]摘苹果"
 date:       2018-10-30
 author:     "Dispwnl"
 header-img: "img/used/786.jpg"
