--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -929,5 +929,32 @@ $Refun$（指着趴在桌子上~~睡觉~~提升思维能力的昊哥）：你看
 
 昊哥（睡眼惺忪）：？？？
 
+### $04.21$
 
+我：癌贵州离广西近么
 
+昊哥（沉默了几秒）：贵州李广西晋……啥玩意
+
+然后开始百度李广（射石头）
+
+昊哥：你看李广是陇西的而且是西汉的啊，你怎么把三个没关系的词联系在一起的
+
+$fuge$：不ta说的是[锡金](https://www.baidu.com/link?url=voK2aB8s_DINCjdIx9nQHOL7ot7b0Sifk2vsVL1DJPp4675hIyRWu6dUZl8rky2z0CI1XNv-L5jy2yRLUzG1c02v5ji3EBWfAFtDlY6Lhrz0ZCsOD49ODInrsnaOscax32nHNaj_IG3p18BFiJWdmDkyPRvHimNNn7Wjv5-5GH3&wd=&eqid=dd0ddb3200000b40000000035cbbc7d0)，那离贵州挺近的
+
+我：mdzz
+
+------
+
+昊哥（皱眉嗅）：$fuge$你昨天洗澡了吗
+
+$fuge$：没
+
+昊哥：那你前天洗澡了吗
+
+$fuge$：没，但是我大大前天洗澡了
+
+昊哥：……那你洗完澡之后是不是没换校服啊
+
+$fuge$：对啊有味吗我闻闻（扯着袖子狂吸）……感觉没啥味啊
+
+昊哥：不你可能已经**身在福中不知福**了
