--- a/_posts/2019-04-21-[GZOI2019]逼死强迫症.md
+++ b/_posts/2019-04-21-[GZOI2019]逼死强迫症.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[GZOI2019]逼死强迫症"
 date:		2019-04-21
 author:		"Dispwnl"
-header-img:	"img/used"
+header-img:	"img/used/14316482.png"
 catalog:	false
 tags:
     - 矩阵乘法
