--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -958,3 +958,11 @@ $fuge$：没，但是我大大前天洗澡了
 $fuge$：对啊有味吗我闻闻（扯着袖子狂吸）……感觉没啥味啊
 
 昊哥：不你可能已经**身在福中不知福**了
+
+------
+
+我：$fuge$你知道么五常非常$nb$
+
+$fuge$：对对对我知道武昌大米可好吃了
+
+![](/img/qaq/？？？.jpg)
