--- a/_posts/2019-03-15-[BZOJ4237]稻草人.md
+++ b/_posts/2019-03-15-[BZOJ4237]稻草人.md
@@ -7,6 +7,7 @@ header-img:	"img/used/2224.jpg"
 catalog:	false
 tags:
     - CDQ分治
+    - 单调栈
 ---
 
 ## [题目](https://lydsy.com/JudgeOnline/problem.php?id=4237)
