--- a/_posts/2019-04-21-[HNOI2014]江南乐.md
+++ b/_posts/2019-04-21-[HNOI2014]江南乐.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[HNOI2014]江南乐"
 date:		2019-04-21
 author:		"Dispwnl"
-header-img:	"img/used"
+header-img:	"img/used/225832.png"
 catalog:	false
 tags:
     - 博弈论
