--- a/_posts/2019-04-21-[POI2000]条纹.md
+++ b/_posts/2019-04-21-[POI2000]条纹.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[POI2000]条纹"
 date:		2019-04-21
 author:		"Dispwnl"
-header-img:	"img/used/"
+header-img:	"img/used/1725192.png"
 catalog:	false
 tags:
     - 博弈论
