--- a/_posts/2019-04-21-[HNOI2007]分裂游戏.md
+++ b/_posts/2019-04-21-[HNOI2007]分裂游戏.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[HNOI2007]分裂游戏"
 date:		2019-04-21
 author:		"Dispwnl"
-header-img:	"img/used"
+header-img:	"img/used/14339812.png"
 catalog:	false
 tags:
     - 博弈论
@@ -19,7 +19,7 @@ tags:
 
 所以可以把每个瓶子看成一个独立的游戏，处理出来$n$个瓶子时$SG$的值
 
-至于找方案，可以$O(n^3)$枚举$i,j,k$，判断去掉$SG_i$异或上$SG_j,SG_k$是否满足必胜即可
+至于找方案，可以$O(n^3)$枚举$i,j,k$，判断去掉$SG_i$异或上$SG_j,SG_k$（即规定了第一步应该这么走）是否满足必胜即可
 
 ### 代码
 
