--- a/_posts/2019-04-22-[GZOI2019]与或和.md
+++ b/_posts/2019-04-22-[GZOI2019]与或和.md
@@ -3,7 +3,7 @@ layout:			post
 title:			"[GZOI2019]与或和"
 date:			2019-04-22
 author:			"Dispwnl"
-header-img:		"img/used"
+header-img:		"img/used/233622.jpg"
 catalog:		false
 tags:
     - 单调栈
