--- a/_posts/2019-04-24-[TJOI2015]组合数学.md
+++ b/_posts/2019-04-24-[TJOI2015]组合数学.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[TJOI2015]组合数学"
 date:		2019-04-24
 author:		"Dispwnl"
-header-img:	"img/used/"
+header-img:	"img/used/195419.png"
 catalog:	false
 tags:
     - 动态规划
