--- a/_posts/2019-04-23-[BJOI2019]奥术神杖.md
+++ b/_posts/2019-04-23-[BJOI2019]奥术神杖.md
@@ -113,7 +113,7 @@ int main()
 	double l=0,r=A;
 	while(l<=r)
 	{
-		double mid((l+r)/2);
+		double mid=(l+r)/2;
 		if(_A.look(mid)) l=mid+fs;
 		else r=mid-fs;
 	}
