--- a/_posts/2019-01-12-[LOJ6041]事情的相似度.md
+++ b/_posts/2019-01-12-[LOJ6041]事情的相似度.md
@@ -29,7 +29,7 @@ tags:
 
 第一行两个整数 $n$、$m$，表示串长和询问个数。
 第二行长度为 $n$ 的 01 串，表示历史的行程。
-接下来 $m$ 行，每行两个正整数 $l$、$r$ 表示询问的区间，包括端点，保证 $1 \leq l < r \leq n​$。
+接下来 $m$ 行，每行两个正整数 $l$、$r$ 表示询问的区间，包括端点，保证 $1 \leq l < r \leq n$。
 
 ### 输出格式
 
@@ -161,10 +161,6 @@ int read()
 }
 void change(int l,int r,int k,int x,int dis)
 {
-	if(dis==14)
-	{
-		cout<<"";
-	}
 	s[k].x=max(s[k].x,dis);
 	if(l==r) return;
 	if(x<=mid) change(l,mid,tl,x,dis);
