--- a/_posts/2019-04-25-[HEOI2013]SAO.md
+++ b/_posts/2019-04-25-[HEOI2013]SAO.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[HEOI2013]SAO"
 date:		2019-04-25
 author:		"Dispwnl"
-header-img:	"img/used/"
+header-img:	"img/used/001209.jpg"
 catalog:	false
 tags:
     - 动态规划
