--- a/_posts/2019-04-25-[HNOI2018]转盘.md
+++ b/_posts/2019-04-25-[HNOI2018]转盘.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[HNOI2018]转盘"
 date:		2019-04-25
 author:		"Dispwnl"
-header-img:	"img/used"
+header-img:	"img/used/234130.png"
 catalog:	false
 tags:
     - 线段树
