--- a/_posts/2019-04-26-[JLOI2016]字符串覆盖.md
+++ b/_posts/2019-04-26-[JLOI2016]字符串覆盖.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[JLOI2016]字符串覆盖"
 date:		2019-04-26
 author:		"Dispwnl"
-header-img:	"img/used"
+header-img:	"img/used/233645.jpg"
 catalog:	false
 tags:
     - KMP
