--- a/_posts/2019-04-26-[SCOI2003]字符串折叠.md
+++ b/_posts/2019-04-26-[SCOI2003]字符串折叠.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[SCOI2003]字符串折叠"
 date:		2019-04-26
 author:		"Dispwnl"
-header-img:	"img/used"
+header-img:	"img/used/171954.jpg"
 catalog:	false
 tags:
     - 动态规划
