--- a/_posts/2019-04-26-[SDOI2011]保密.md
+++ b/_posts/2019-04-26-[SDOI2011]保密.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[SDOI2011]保密"
 date:		2019-04-26
 author:		"Dispwnl"
-header-img:	"img/used"
+header-img:	"img/used/001745.png"
 catalog:	false
 tags:
     - 网络流
