--- a/_posts/2019-04-26-[ZJOI2005]沼泽鳄鱼.md
+++ b/_posts/2019-04-26-[ZJOI2005]沼泽鳄鱼.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[ZJOI2005]沼泽鳄鱼"
 date:		2019-04-26
 author:		"Dispwnl"
-header-img:	"img/used"
+header-img:	"img/used/224802.jpg"
 catalog:	false
 tags:
     - 矩阵乘法
