--- a/_posts/2019-04-26-[六省联考2017]寿司餐厅.md
+++ b/_posts/2019-04-26-[六省联考2017]寿司餐厅.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[六省联考2017]寿司餐厅"
 date:		2019-04-26
 author:		"Dispwnl"
-header-img:	"img/used"
+header-img:	"img/used/131604.jpg"
 catalog:	false
 tags:
     - 网络流
