--- a/_posts/2019-04-27-[JSOI2009]球队收益.md
+++ b/_posts/2019-04-27-[JSOI2009]球队收益.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[JSOI2009]球队收益"
 date:		2019-04-27
 author:		"Dispwnl"
-header-img:	"img/used"
+header-img:	"img/used/234408.jpg"
 catalog:	false
 tags:
     - 费用流
