--- a/_posts/2019-04-29-[PKUWC2018]随机游走.md
+++ b/_posts/2019-04-29-[PKUWC2018]随机游走.md
@@ -3,6 +3,8 @@ layout:		post
 title:		"[PKUWC2018]随机游走"
 date:		2019-04-29
 author:		"Dispwnl"
+header-img:	"img/used/"
+catalog:	false
 tags:
     - FWT
     - 概率与期望
