--- a/_posts/2019-04-29-[PKUWC2018]随机游走.md
+++ b/_posts/2019-04-29-[PKUWC2018]随机游走.md
@@ -120,5 +120,5 @@ __ main()
 }
 ```
 
-[可读性可能好一点的代码]([https://github.com/A-Failure/Dispwnl-s-codes/blob/master/_posts/%5BPKUWC2018%5D%E9%9A%8F%E6%9C%BA%E6%B8%B8%E8%B5%B0%EF%BC%88%E5%8F%AF%E8%AF%BB%E7%89%88%EF%BC%89](https://github.com/A-Failure/Dispwnl-s-codes/blob/master/_posts/[PKUWC2018]随机游走（可读版）))
+[可读性可能好一点的代码](https://github.com/A-Failure/Dispwnl-s-codes/blob/master/_posts/%5BPKUWC2018%5D%E9%9A%8F%E6%9C%BA%E6%B8%B8%E8%B5%B0%EF%BC%88%E5%8F%AF%E8%AF%BB%E7%89%88%EF%BC%89)
 
