--- a/_posts/2019-04-29-[PKUWC2018]随机游走.md
+++ b/_posts/2019-04-29-[PKUWC2018]随机游走.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[PKUWC2018]随机游走"
 date:		2019-04-29
 author:		"Dispwnl"
-header-img:	"img/used/"
+header-img:	"img/used/165823.png"
 catalog:	false
 tags:
     - FWT
