--- a/_posts/2019-05-03-[CF487E]Tourists.md
+++ b/_posts/2019-05-03-[CF487E]Tourists.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[CF487E]Tourists"
 date:		2019-05-03
 author:		"Dispwnl"
-header-img:	"img/used/"
+header-img:	"img/used/234933.png"
 catalog:	false
 tags:
     - 圆方树
