--- a/_posts/2019-05-03-[SDOI2018]战略游戏.md
+++ b/_posts/2019-05-03-[SDOI2018]战略游戏.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[SDOI2018]战略游戏"
 date:		2019-05-03
 author:		"Dispwnl"
-header-img:	"img/used/"
+header-img:	"img/used/002143.png"
 catalog:	false
 tags:
     - 圆方树
