--- a/_posts/2022-05-24-日记 单调的单人宿舍生活.md
+++ b/_posts/2022-05-24-日记 单调的单人宿舍生活.md
@@ -43,6 +43,8 @@ tags:
 
 - 抄不到作业太难受了，现学吧
 
+  ![image-20220524210143052](C:\Users\22973\AppData\Roaming\Typora\typora-user-images\image-20220524210143052.png)
+
 - 预报要下大雨刮大风，结果就憋了几滴出来，白忙活了
 
 - 显V那位置不错，明儿去占了
