--- a/_posts/2021-07-21-[HDU6959]zoto.md
+++ b/_posts/2021-07-21-[HDU6959]zoto.md
@@ -14,7 +14,7 @@ tags:
 
 ### 题解
 
-
+考试的时候想到了莫队套数据结构维护，但是没想到分块……
 
 首先可以把题目简化成二维矩阵的查询，如果去掉查询中$y$坐标的限制，即查询一段区间内不同数的个数，这个显然是可以用莫队搞的；而对于加上$y$的限制，考虑能否用数据结构维护莫队每一步移动对于$y$值域的贡献以及查询
 
