--- a/_posts/2100-03-13-test.md
+++ b/_posts/2100-03-13-test.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Hello World"
+title:      "test"
 date:       2100-03-13
 author:     "Dispwnl"
 header-img: "img/used/13.jpg"
